  *) Modify <VirtualHost> directive to work without the system supporting
     multiple IP addresses. It can now take advantage of the Host: header
     sent by some (but not all) new web browsers (e.g. Netscape 2.0). Those
     that do not support it will get the default documents. More names or
     name patters can be added using the ScriptAlias directive, e.g.
     "ScriptAlias foo.bar.net *.foo.com foo.com"

  *) Added Status module with preliminary documentation available
     http://www.apache.org/docs/1.1/mod_status.html

  *) Added simple and complex instrumentation to Apache to allow a
     instantaneous status screen to be displayed.  Since the complex
     instrumentation makes the scoreboard file bigger it has been 
     made a compile-time define (add "-DSTATUS_INSTRUMENTATION" to 
     CLAGS in the Configuration file) [Mark Cox]

  *) Made it so XBITHACK behavior only occurs for files of type text/html, as
     any other file type doesn't really make sense. [Alexei Kosut]

  *) Slightly modified the API to allow handlers by things other than
     content type. Setting r->handler will override r->content_type in
     invoke_handler(). [Alexei Kosut]

  *) Added FLOCK_SERIALIZED_ACCEPT for those systems, like A/UX,
     that need mutex-capability but using fcntl-locking is
     expensive. [Jim Jagielski]

  *) Added in Cliff Skolnick's read_client_block patch (check for
     no reads and break) [Jim Jagielski]

  *) If there was no default MIME type defined, Apache sent Content-type:
     without a newline, thus swallowing the next header. Changed to send no
     Content-type: at all. [Ben Laurie]

  *) Long overdue revamp of the Cookies module to stop Apache cookies
     colliding with other cookies a site may be using.  Cookies are now
     always generated for every browser, not just Netscape (and clones)
     [Mark Cox]

  *) Clean up strings.h warning for SGI [Mark Cox]

  *) Add HAVE_MMAP to SCO 5. [Ben Laurie]
